<resources>
    <string name="app_name">utb_project_wim</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home">home</string>
    <string name="seconds_to_hold">Seconds to hold:</string>
    <string name="predicted_difficulty">Predicted difficulty:</string>
    <string name="number_of_breaths">Number of breaths:</string>
    <string name="number_of_rounds">Number of rounds:</string>
    <string name="name">Name:</string>
    <string name="pick_up_your_practice">Pick up your practice!</string>
    <string name="create_new">create new!</string>
    <string name="welcome_to_the_wimhopfapp">Welcome to the WimHopfApp</string>
    <string name="welcome_to_the_wimhofapp">Welcome to the WimHofApp</string>
    <string name="today_s_weather">Today\'s weather:</string>
    <string name="last_practice">Last practice:</string>
    <string name="start">Start</string>
    <string name="todo">TODO</string>
    <string name="round">Round:</string>
    <string name="unknow">Unknow</string>
    <string name="unknown">Unknown</string>
</resources>